# DevOps

./: FuncA.cpp  HTTPServer.cpp  HTTPServer.h  HttpServer.cpp  HttpServer.h  Makefile  Makefile.am  configure.ac  main.cpp
.github/workflows/: build-debian-package.yml  build-tarball.yml  build.yml  tests.yml
tests/: test_FuncA.cpp
